--- a/app/src/main/res/layout/activity_company_edit_profile.xml
+++ b/app/src/main/res/layout/activity_company_edit_profile.xml
@@ -17,6 +17,14 @@
         android:gravity="center"
         android:textColor="@color/blue"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="Contact Number"
+        android:textColor="@color/black"
+        android:layout_marginTop="20dp"/>
+
     <EditText
         android:id="@+id/et_editCompanyContactNumber"
         android:layout_width="match_parent"
@@ -24,7 +32,14 @@
         android:text="09173098555"
         android:ems="10"
         android:inputType="text|number"
-        android:textSize="14dp"
+        android:textSize="14dp"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="About"
+        android:textColor="@color/black"
         android:layout_marginTop="20dp"/>
 
     <EditText
@@ -32,15 +47,22 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:textSize="14dp"
-        android:text="Company About\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat"
+        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat"
         android:ems="10"
         android:inputType="text|textMultiLine"
-        android:layout_marginTop="20dp"
         android:gravity="top|left"
         android:lines="20"
         android:minLines="5"
         android:scrollHorizontally="false"
         android:scrollbars="vertical"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="Location"
+        android:textColor="@color/black"
+        android:layout_marginTop="20dp"/>
 
     <EditText
         android:id="@+id/et_editCompanyLocation"
@@ -49,7 +71,14 @@
         android:text="Location"
         android:ems="10"
         android:textSize="14dp"
-        android:inputType="text"
+        android:inputType="text"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="16sp"
+        android:text="Website"
+        android:textColor="@color/black"
         android:layout_marginTop="20dp"/>
 
     <EditText
@@ -59,9 +88,7 @@
         android:text="www.companywebsite.com"
         android:textSize="14dp"
         android:ems="10"
-        android:inputType="textUri"
-        android:layout_marginTop="20dp"
-        />
+        android:inputType="textUri"/>
 
     <LinearLayout
         android:layout_width="match_parent"
