--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -9,6 +9,7 @@
     tools:context=".Register"
     android:padding="20dp">
 
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,7 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="I am applying as"/>
+        android:text="I am applying as"
+        android:textColor="@color/black"/>
 
     <Spinner
         android:id="@+id/sp_accountType"
@@ -34,7 +36,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textSize="16dp"
-        android:text="Name"/>
+        android:text="Name"
+        android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/et_registerInternName"
@@ -50,7 +53,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textSize="16dp"
-        android:text="Email"/>
+        android:text="Email"
+        android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/et_registerInternEmail"
@@ -67,7 +71,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textSize="16dp"
-        android:text="Contact Number"/>
+        android:text="Contact Number"
+        android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/et_registerInternNumber"
@@ -83,7 +88,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:textSize="16dp"
-        android:text="Password"/>
+        android:text="Password"
+        android:textColor="@color/black"/>
 
     <EditText
         android:id="@+id/et_registerInternPassword"
