--- a/app/src/main/res/layout/activity_company_job_listing.xml
+++ b/app/src/main/res/layout/activity_company_job_listing.xml
@@ -29,4 +29,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_jobListTitle" />
+
+    <Button
+        android:id="@+id/btn_addInternship"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Add internship"
+        app:layout_constraintEnd_toEndOf="@+id/rv_jobListing"
+        app:layout_constraintStart_toStartOf="@+id/rv_jobListing"
+        tools:layout_editor_absoluteY="358dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
