--- a/app/src/main/res/layout/activity_company_view_applicant_information.xml
+++ b/app/src/main/res/layout/activity_company_view_applicant_information.xml
@@ -4,49 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".company.CompanyProfile"
+    tools:context=".company.CompanyViewApplicantInformation"
     android:orientation="vertical"
     android:padding="20dp">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/tv_company_internProfile_name"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/tv_companyProfile_companyName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="Company Name"
-            android:textColor="@color/black"
-            android:layout_weight="1"
-            android:textStyle="bold"/>
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_companyProfile_edit"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:text="Edit"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/blue"/>
-
-    </LinearLayout>
+        android:textSize="18sp"
+        android:text="Intern Name"
+        android:textColor="@color/black"
+        android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/tv_companyProfile_industry"
+        android:id="@+id/tv_company_internProfile_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16dp"
-        android:text="Industry"
+        android:text="myemail@email.com"
         android:textColor="@color/black"/>
 
     <TextView
-        android:id="@+id/tv_companyProfile_location"
+        android:id="@+id/tv_company_internProfile_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16dp"
-        android:text="Location"
+        android:text="091188882229"
         android:textColor="@color/black"/>
 
     <TextView
@@ -59,7 +43,7 @@
         android:textStyle="bold"/>
 
     <TextView
-        android:id="@+id/tv_companyProfile_companyAboutText"
+        android:id="@+id/tv_company_internProfile_about"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14dp"
@@ -71,51 +55,48 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="16dp"
-        android:text="@string/contact_us"
+        android:text="Experience"
         android:textColor="@color/black"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        android:layout_marginTop="20dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_company_intern_experiences"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="8" />
 
     <TextView
-        android:id="@+id/tv_companyProfile_contactNumber"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textSize="16dp"
+    android:text="Education"
+    android:textColor="@color/black"
+    android:layout_marginTop="20dp"
+    android:textStyle="bold"/>
+
+    <TextView
+        android:id="@+id/tv_company_internProfile_school"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14dp"
-        android:text="09191998777"
         android:layout_marginTop="10dp"
+        android:text="School"
         android:textColor="@color/black"/>
 
     <TextView
-        android:id="@+id/tv_companyProfile_email"
+        android:id="@+id/tv_company_internProfile_course"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14dp"
-        android:text="companyemail@gmail.com"
+        android:text="Course"
         android:textColor="@color/black"/>
 
     <TextView
-        android:id="@+id/tv_companyProfile_website"
+        android:id="@+id/tv_company_internProfile_gradYear"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14dp"
-        android:text="www.coolcompanywebsite.com"
+        android:text="2023"
         android:textColor="@color/black"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:text="@string/learn_more"
-        android:textColor="@color/black"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/tv_companyProfile_video"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14dp"
-        android:text="Youtube Video"
-        android:textColor="@color/black"/>
-
 </LinearLayout>
