--- a/app/src/main/res/layout/item_internship.xml
+++ b/app/src/main/res/layout/item_internship.xml
@@ -22,20 +22,30 @@
             android:layout_marginTop="10dp"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold"/>
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/text_company"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/text_title"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/text_function"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/text_title"
-            android:layout_marginStart="10dp"/>
+            android:layout_below="@id/text_company"
+            android:layout_marginStart="10dp" />
 
         <TextView
             android:id="@+id/text_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/text_function"
-            android:layout_marginStart="10dp"/>
+            android:layout_marginStart="10dp" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
