--- a/app/src/main/res/layout/activity_company_view_applicant_information.xml
+++ b/app/src/main/res/layout/activity_company_view_applicant_information.xml
@@ -63,8 +63,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_company_intern_experiences"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8" />
+        android:layout_height="wrap_content"/>
 
     <TextView
     android:layout_width="match_parent"
