--- a/app/src/main/res/layout/activity_intern_feedback.xml
+++ b/app/src/main/res/layout/activity_intern_feedback.xml
@@ -18,7 +18,8 @@
         android:textColor="@color/blue"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tv_internshipTitle"
