--- a/app/src/main/res/layout/activity_intern_view_companies.xml
+++ b/app/src/main/res/layout/activity_intern_view_companies.xml
@@ -4,33 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".intern.InternViewCompanies">
+    tools:context=".intern.InternViewCompanies"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/tv_companyListTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
-        android:layout_marginBottom="16dp"
         android:text="@string/companies"
-        android:textSize="24dp"
-        app:layout_constraintBottom_toTopOf="@id/rv_companyList"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="24sp"
+        android:gravity="center"
+        android:textColor="@color/blue"
+        android:paddingBottom="5dp"
+        android:textStyle="bold"/>
+
+    <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/spinner_industry"
+        android:layout_width="150dp"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:entries="@array/function_list"
+        android:layout_marginTop="5dp"
+        android:textSize="14dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_companyListTitle"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:layout_marginTop="20dp" Top="20dp"
         android:id="@+id/rv_companyList"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tv_companyListTitle" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/spinner_industry" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
