--- a/app/src/main/res/layout/activity_intern_view_internships.xml
+++ b/app/src/main/res/layout/activity_intern_view_internships.xml
@@ -18,7 +18,8 @@
         android:textSize="24sp"
         android:gravity="center"
         android:textColor="@color/blue"
-        android:paddingBottom="5dp"/>
+        android:paddingBottom="5dp"
+        android:textStyle="bold"/>
 
     <LinearLayout
         android:id="@+id/linear_layout_1"
