--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -16,7 +16,8 @@
         android:textSize="24dp"
         android:text="@string/register"
         android:gravity="center"
-        android:textColor="@color/blue"/>
+        android:textColor="@color/blue"
+        android:textStyle="bold"/>
 
     <TextView
         android:layout_width="match_parent"
