--- a/app/src/main/res/layout/activity_company_edit_profile.xml
+++ b/app/src/main/res/layout/activity_company_edit_profile.xml
@@ -15,7 +15,8 @@
         android:textSize="24sp"
         android:text="@string/edit_profile"
         android:gravity="center"
-        android:textColor="@color/blue"/>
+        android:textColor="@color/blue"
+        android:textStyle="bold"/>
 
     <TextView
         android:layout_width="wrap_content"
