--- a/app/src/main/res/layout/activity_company_job_listing.xml
+++ b/app/src/main/res/layout/activity_company_job_listing.xml
@@ -4,38 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".company.CompanyJobListing">
+    tools:context=".company.CompanyJobListing"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/tv_jobListTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="172dp"
-        android:layout_marginEnd="163dp"
-        android:text="@string/currentJobListing"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/rv_jobListing"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="My Internships"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:textSize="24sp"
+        android:gravity="center"
+        android:textColor="@color/blue"
+        android:paddingBottom="5dp"
+        android:textStyle="bold"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_addInternship"
+        android:layout_width="200dp"
+        android:layout_height="40dp"
+        android:text="Add Internship"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/blue"
+        app:layout_constraintTop_toBottomOf="@+id/tv_jobListTitle"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_jobListing"
-        android:layout_width="409dp"
-        android:layout_height="710dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_jobListTitle" />
-
-    <Button
-        android:id="@+id/btn_addInternship"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Add internship"
-        app:layout_constraintEnd_toEndOf="@+id/rv_jobListing"
-        app:layout_constraintStart_toStartOf="@+id/rv_jobListing"
-        tools:layout_editor_absoluteY="358dp" />
+        app:layout_constraintTop_toBottomOf="@+id/btn_addInternship"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:paddingTop="20dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
