--- a/app/src/main/res/layout/activity_intern_profile.xml
+++ b/app/src/main/res/layout/activity_intern_profile.xml
@@ -97,8 +97,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_intern_profile_experiences"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="8"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/tv_my_internships"/>
 
     <TextView
