--- a/app/src/main/res/layout/activity_intern_update_experience.xml
+++ b/app/src/main/res/layout/activity_intern_update_experience.xml
@@ -14,7 +14,8 @@
         android:textSize="24sp"
         android:text="Update Experience"
         android:gravity="center"
-        android:textColor="@color/blue"/>
+        android:textColor="@color/blue"
+        android:textStyle="bold"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -100,39 +101,13 @@
         android:text="Experience"
         android:gravity="center"
         android:textColor="@color/black"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="20dp"
+        android:textStyle="bold"
+        />
 
-
-    <androidx.cardview.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/card_view"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_company_intern_experiences"
         android:layout_width="match_parent"
-        android:layout_height="75dp"
-        card_view:cardCornerRadius="4dp">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            
-            <TextView
-                android:id="@+id/tv_experienceTitle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:text="Experience Title"
-                android:textColor="@color/black"
-                android:textSize="16sp"
-                android:textStyle="bold"/>
-
-            <TextView
-                android:id="@+id/idTVCourseRating"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_experienceTitle"
-                android:layout_marginStart="10dp"
-                android:text="Company Name"/>
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
