--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#01335C</color>
     <color name="light_blue">#AFD3D8</color>
+    <color name="red">#9E1207</color>
 </resources>
