--- a/app/src/main/res/layout/activity_intern_profile.xml
+++ b/app/src/main/res/layout/activity_intern_profile.xml
@@ -6,132 +6,162 @@
     android:layout_height="match_parent"
     tools:context=".intern.InternProfile"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="10dp"
+    android:background="@color/grey">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical"
+        android:background="@color/white"
+        android:padding="10dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_internProfile_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:text="Intern Name"
+                android:textColor="@color/black"
+                android:layout_weight="1"
+                android:textStyle="bold"/>
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_internProfile_edit"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:text="Edit"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/blue"/>
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_internProfile_name"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_internProfile_email"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:text="Intern Name"
-            android:textColor="@color/black"
-            android:layout_weight="1"
-            android:textStyle="bold"/>
+            android:textSize="16dp"
+            android:text="myemail@email.com"
+            android:textColor="@color/black"/>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_internProfile_edit"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:text="Edit"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/blue"/>
-
+        <TextView
+            android:id="@+id/tv_internProfile_number"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:text="091188882229"
+            android:textColor="@color/black"/>
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_internProfile_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:text="myemail@email.com"
-        android:textColor="@color/black"/>
-
-    <TextView
-        android:id="@+id/tv_internProfile_number"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:text="091188882229"
-        android:textColor="@color/black"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:text="@string/about"
-        android:textColor="@color/black"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/tv_internProfile_about"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14dp"
-        android:layout_marginTop="10dp"
-        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
-        android:textColor="@color/black"/>
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="20dp">
+        android:orientation="vertical"
+        android:background="@color/white"
+        android:padding="10dp"
+        android:layout_marginTop="10dp">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="16dp"
-            android:text="Experience"
+            android:text="@string/about"
             android:textColor="@color/black"
-            android:textStyle="bold"
-            android:layout_weight="1"/>
+            android:textStyle="bold"/>
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_internProfile_update"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
-            android:text="Update"
-            android:textColor="@color/white"
-            android:backgroundTint="@color/blue"/>
-
+        <TextView
+            android:id="@+id/tv_internProfile_about"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14dp"
+            android:layout_marginTop="10dp"
+            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+            android:textColor="@color/black"/>
     </LinearLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_intern_profile_experiences"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/tv_my_internships"/>
+        android:orientation="vertical"
+        android:background="@color/white"
+        android:padding="10dp"
+        android:layout_marginTop="10dp">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="16dp"
-        android:text="Education"
-        android:textColor="@color/black"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <TextView
-        android:id="@+id/tv_internProfile_school"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14dp"
-        android:layout_marginTop="10dp"
-        android:text="School"
-        android:textColor="@color/black"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16dp"
+                android:text="Experience"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                android:layout_weight="1"/>
 
-    <TextView
-        android:id="@+id/tv_internProfile_course"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14dp"
-        android:text="Course"
-        android:textColor="@color/black"/>
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btn_internProfile_update"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:text="Update"
+                android:textColor="@color/white"
+                android:backgroundTint="@color/blue"/>
 
-    <TextView
-        android:id="@+id/tv_internProfile_gradYear"
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_intern_profile_experiences"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/tv_my_internships"/>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="14dp"
-        android:text="2023"
-        android:textColor="@color/black"/>
+        android:orientation="vertical"
+        android:background="@color/white"
+        android:padding="10dp"
+        android:layout_marginTop="10dp">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="16dp"
+            android:text="Education"
+            android:textColor="@color/black"
+            android:textStyle="bold"/>
+
+        <TextView
+            android:id="@+id/tv_internProfile_school"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14dp"
+            android:layout_marginTop="10dp"
+            android:text="School"
+            android:textColor="@color/black"/>
+
+        <TextView
+            android:id="@+id/tv_internProfile_course"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14dp"
+            android:text="Course"
+            android:textColor="@color/black"/>
+
+        <TextView
+            android:id="@+id/tv_internProfile_gradYear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="14dp"
+            android:text="2023"
+            android:textColor="@color/black"/>
+    </LinearLayout>
 
 </LinearLayout>
